fix: avoid silly word breaking in tables on mobile

--- a/src/layouts/typography.css
+++ b/src/layouts/typography.css
@@ -141,6 +141,7 @@ td,
 th {
   border-left: 1px solid var(--c-border);
   padding: 0.25rem 0.5rem;
+  word-break: normal;
 }
 td:first-child,
 th:first-child {
